# tategoto

./: .gitignore  .oxfmtrc.json  .oxlintrc.json  AGENTS.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.ts
docs/: chatgpt_realtime_transcription.md  tategoto_app_design.md
src/: App.tsx
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_events.rs  app_paths.rs  apple_speech.rs  audio.rs  commands.rs  lib.rs  main.rs  model.rs  realtime.rs  settings.rs  transcript.rs  transcription.rs  tray.rs
src-tauri/swift/: AppleSpeechTranscriber.swift
src/features/transcription/: api.ts  options.ts  types.ts  useTranscriptionController.ts
src/features/transcription/components/: DeviceSection.tsx  ErrorBanner.tsx  OutputSection.tsx  RecordingControls.tsx  StatusPill.tsx  TranscriptionSettingsSection.tsx  WarningBanner.tsx
