[package]
name = "tategoto"
version = "0.1.0"
description = "MacOS menu bar transcription app that saves microphone transcripts locally."
authors = ["NISHIZAWA Shuntaro <me@s2n.tech>"]
edition = "2024"
license = "MIT"

[lib]
name = "tategoto_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
anyhow = "1.0.100"
base64 = "0.22.1"
chrono = { version = "0.4.42", features = ["serde"] }
cpal = "0.16.0"
dirs = "6.0.0"
futures-util = "0.3.31"
reqwest = { version = "0.12.25", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
tauri = { version = "2.9.5", features = ["tray-icon"] }
tauri-plugin-opener = "2.5.0"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "sync", "time"] }
tokio-tungstenite = { version = "0.28.0", features = ["rustls-tls-webpki-roots"] }
tokio-util = "0.7.17"

[dev-dependencies]
tempfile = "3.23.0"
